package example3;
// специализированный интерфейс для рисования круга
public interface ICircle{
    void drawCircle();
}
