package example3;
// специализированный интерфейс для рисования линии
public interface ILine{
    void drawLine();
}
