package example3;
// специализированный интерфейс для рисования прямоугольника
public interface IRect{
    void drawRect();
}
