package example3;

import java.sql.Ref;

public class Main {
    public static void main(String[] args) {
        Circle circle = new Circle();
        circle.drawCircle();
        Line line = new Line();
        line.drawLine();
        Rectangle rectangle = new Rectangle();
        rectangle.drawRect();
    }
}
